Fixing heading levels and color contrast issues on Resume page

--- a/sass/pages/_resume.scss
+++ b/sass/pages/_resume.scss
@@ -19,7 +19,7 @@
 
       &:last-of-type {
         text-align: right;
-        
+
         @media screen and (max-width: $mobile-breakpoint) {
           margin-top: 40px;
           text-align: center;
@@ -29,19 +29,19 @@
 
     .version {
       border: 0;
-  
+
       .options {
         margin-top: 10px;
-  
+
         input {
           display: none;
-  
+
           &:checked + label {
             background-color: rgba(0,0,0,.7);
             color: #fff;
           }
         }
-  
+
         label {
           display: inline-block;
           cursor: pointer;
@@ -53,12 +53,12 @@
           line-height: 2;
           color: rgba(0,0,0,.7);
           transition: .2s all ease-in-out;
-  
+
           &:first-of-type {
             border-top-left-radius: 5px;
             border-bottom-left-radius: 5px;
           }
-  
+
           &:last-of-type {
             margin-left: -5px;
             border-top-right-radius: 5px;
@@ -109,9 +109,11 @@
       @media(max-width: $tablet-breakpoint) {
       }
 
-      h5 {
+      h3 {
         font-weight: 500;
         font-size: 20px;
+        font-style: normal;
+        color: $body-text-color;
         margin-bottom: 10px;
       }
 
@@ -132,17 +134,9 @@
 
         ul {
           padding: 5px 0 5px 15px;
-
-          li {
-            color: rgba(0, 0, 0, .4);
-          }
         }
       }
 
-      small {
-        opacity: .7;
-      }
-      
       .progress {
         width: 75px;
         border-radius: 0;
@@ -158,8 +152,8 @@
   .job,
   .degree {
     .title {
-      font-size: 18px;
-      font-weight: 400;
+      font-size: 20px;
+      font-style: normal;
 
       margin-bottom: 3px;
       margin-top: 40px;
@@ -167,7 +161,9 @@
 
     .details {
       margin: 0;
-      opacity: .5;
+      // opacity: .5;
+      font-style: italic;
+      color: $body-text-color;
     }
 
     .highlights {
